--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,70 @@
-uwsgi==2.0.17.1
+apysignature==0.1.3
+arrow==0.10.0
+backports.ssl-match-hostname==3.7.0.1
+boto==2.48.0
+cassandra-driver==3.11.0
+certifi==2019.9.11
+cffi==1.13.0
+chardet==3.0.4
+cryptography==2.8
+Django==1.7.11
+django-cors-headers==1.1.0
+django-dbarray==0.2
+django-geventpool==1.2.2
+django-postgrespool==0.3.0
+django-timezones2==1.0.4
+django-transaction-hooks==0.2
+djangorestframework==2.4.3
+djorm-pgarray==1.2
+docopt==0.4.0
+elasticache-pyclient==2.0
+enum34==1.1.6
+futures==3.0.3
+gevent==1.4.0
+greenlet==0.4.15
+hash-ring==1.3.1
+helper==2.4.2
+httplib2==0.9.2
+idna==2.6
+ipaddress==1.0.22
+jsonfield==1.0.3
+jsonpickle==0.9.2
+mandrill==1.0.0
+mittepro==1.3.1
+mock==1.0.1
+ndg-httpsclient==0.5.1
+netaddr==0.7.18
+newrelic==2.60.0.46
+newrelic-plugin-agent==1.3.0
+nltk==3.0.1
+ordereddict==1.1
+psycogreen==1.0
+psycopg2==2.8.3
+pusher==1.5
+pyasn1==0.4.7
+pycparser==2.19
+pycrypto==2.6.1
+pycurl==7.19.5.1
+pyenchant==1.6.6
+pyOpenSSL==19.0.0
+pypgwrap==0.1.15
+python-crontab==1.9.3
+python-dateutil==2.2
+python-memcached==1.57
+pytz==2015.4
+PyYAML==5.1.2
+raven==3.3.12
+redis==2.10.3
+requests==2.18.4
+simplejson==3.6.4
+six==1.8.0
+SQLAlchemy==1.3.10
+statsd==3.3.0
+tornado==3.2.2
+ujson==1.34
+unittest2==0.5.1
+urllib3==1.20
+uWSGI==2.0.17.1
+virtualenv==16.1.0
+webargs==0.13.0
+XlsxWriter==1.1.8
